# stride-alytics

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: api-flow.instructions.md  backend.instructions.md  database.instructions.md  docs-first.instructions.md  frontend.instructions.md
.github/workflows/: backend-ci-cd.yml  build-check.yml  calculate-greeks.yml  ci.yml  database-migrate.yml  fetch-market-data.yml  frontend-ci-cd.yml  generate-weekly-picks.yml  health-check.yml  mobile-build.yml  reusable-python-task.yml
.husky/: pre-commit  pre-commit-backend
Raw Requirements/Business/: Option Selling Platform - Copilot.docx  Option Selling Platform - Full Blueprint (Long Version).docx  StrideAlytics_Business_Rules_and_Requirements.docx
Raw Requirements/Technical/: StrideAlytics – Complete System Architecture-A.md  StrideAlytics — Complete Folder Structure.md  StrideAlytics_Implementation_Blueprint-Claude.docx  stridealytics_full_stack_free_tools_reference.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  run.py  vercel.json
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  auth.py  error_handler.py  logging.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  greeks.py  market.py  portfolio.py  regime.py  screener.py  trades.py
backend/app/api/v1/schemas/: __init__.py  auth.py  greeks.py  market.py  portfolio.py  regime.py  screener.py
backend/app/models/: __init__.py  option.py  portfolio.py  trade.py  user.py
backend/app/services/: __init__.py  auth.py  greeks.py  market.py  portfolio.py  regime.py  screener.py
backend/app/utils/: __init__.py  constants.py  logger.py  validators.py
backend/scripts/: _common.py  dev.py  format.ps1  format.py  format.sh  lint.ps1  lint.py  lint.sh  migrate-to-uv.ps1  migrate-to-uv.sh  test.ps1  test.py  test.sh  typecheck.ps1  typecheck.py  typecheck.sh  verify.ps1  verify.py  verify.sh
backend/tests/: conftest.py  test_api.py  test_db_sql.py  test_models.py  test_services.py
backend/wheels/: ta_lib-0.6.5-cp312-cp312-manylinux_2_28_x86_64.whl  ta_lib-0.6.5-cp312-cp312-win_amd64.whl
database/: .gitignore  README.md  schema.sql
database/functions/: calculate_portfolio_stats.sql
database/migrations/: 001_create_health_check_table.sql  002_initial_schema.sql  002_initial_schema_down.sql  003_row_level_security.sql  004_indexes_views_functions.sql  005_extended_features.sql  005_extended_features_down.sql
database/rls-policies/: portfolios.sql  trades.sql  users.sql
database/scripts/: apply_migrations.ps1  apply_migrations.sh
database/seeds/: dev_users.sql
database/views/: portfolio_summary.sql
docs/: README.md
docs/BUSINESS/: 01-BUSINESS-REQUIREMENTS.md  02-BUSINESS-RULES.md  03-FINANCIAL-MODEL.md  04-APPLICATION-REQUIREMENTS.md
docs/TECHNICAL/: 00-ARCHITECTURE-INDEX.md  01-SYSTEM-OVERVIEW.md  02-SYSTEM-DIAGRAMS.md  03-FOLDER-STRUCTURE.md  BLUEPRINT.md  SUPABASE-SETUP.md
docs/TECHNICAL/LAYERS/: 01-FRONTEND-LAYER.md  02-MOBILE-LAYER.md  03-BACKEND-LAYER.md  04-DATABASE-LAYER.md  05-SCHEDULER-LAYER.md  06-DEPLOYMENT-LAYER.md  07-CI-CD-LAYER.md
docs/TECHNICAL/PHASES/: IMPLEMENTATION-PHASES.md  QUICK-START-CHECKLIST.md  ROADMAP.md  UPGRADE-TRIGGERS.md
docs/TECHNICAL/REFERENCES/: INFRASTRUCTURE-OVERVIEW.md  LIBRARIES-BY-LAYER.md
docs/TECHNICAL/RULES/: CODING-STANDARDS.md  DATA-FLOW-RULES.md  FOLDER-CONVENTIONS.md  README.md
docs/security/: README.md  architecture-decisions.md  audit-log.md  hardening.md  incident-response.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts  errors.ts
frontend/src/hooks/: queries.ts
frontend/src/pages/: ActiveHoldingsPage.tsx  ActiveTradesPage.tsx  AdminPage.tsx  DashboardPage.tsx  ExitAlertsPage.tsx  GreeksPage.tsx  HeatDashboardPage.tsx  LoginPage.tsx  OptionChainPage.tsx  PicksPage.tsx  PortfolioPage.tsx  RegimePage.tsx  ScenariosPage.tsx  ScreenerPage.tsx  SettingsPage.tsx  SignalLogPage.tsx  SignupPage.tsx  SizingPage.tsx  StrategyMatrixPage.tsx  WatchlistPage.tsx  index.js  index.ts
frontend/src/store/: auth.store.ts  greeks.store.ts  index.ts  portfolio.store.ts  screener.store.ts  ui.store.ts
frontend/src/types/: auth.ts  common.ts  greeks.ts  index.ts  market.ts  portfolio.ts  regime.ts  screener.ts  trades.ts
frontend/src/utils/: formatters.ts
infra/: README.md
infra/docker/: docker-compose.yml
infra/render/: README.md
infra/vercel/: README.md
mobile/: .gitignore  App.js  App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
mobile/src/api/: client.tsx
mobile/src/screens/: DashboardScreen.tsx  GreeksScreen.tsx  LoginScreen.js  PicksScreen.tsx  PortfolioScreen.js  RegimeScreen.tsx  (+2 more)
mock/: README.md
mock/backend/: main.py
mock/data/: mock_data.json
mock/frontend/: index.html
requirements/Business/: Option Selling Platform - Claude.docx  Option_Selling_Platform_Build_Guide.docx
requirements/Technical/: stridealytics_architecture_diagrams.md  stridealytics_blueprint_version_A.md  stridealytics_full_library_and_tool.md
scheduler/: .env.example  pyproject.toml  requirements.txt
scheduler/scripts/: calculate_greeks.py  fetch_market_data.py  generate_picks.py  health_check.py
scripts/: check-secrets.mjs  load-secrets.mjs  load-secrets.ps1  load-secrets.ps1.new  load-secrets.sh  setup-dev.ps1  setup-dev.sh
secrets/: README.md  github-secrets.txt  local.env.example  production.env.example  production.env.example.new  staging.env.example
shared/: README.md  package-lock.json  package.json
shared/types/: index.ts
(+43 files in other folders)
