[project]
name = "stride-alytics-backend"
version = "0.1.0"
description = "StrideAlytics platform — backend API"
requires-python = ">=3.10"

dependencies = [
    # --- Core ---
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.12",

    # --- Database ---
    "sqlalchemy[asyncio]==2.0.35",
    "psycopg[binary,pool]>=3.2,<4",
    "supabase==2.8.1",

    # --- Auth ---
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # --- HTTP / external APIs ---
    "httpx==0.27.2",
    "yfinance==0.2.43",

    # --- Data / quant ---
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "ta-lib==0.4.32",

    # --- Logging ---
    "structlog==24.4.0",

    # --- Scheduling (for inline jobs) ---
    "apscheduler==3.10.4",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.7.2",
    "black==24.10.0",
    "mypy==1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
