[project]
name = "stride-alytics-backend"
version = "0.1.0"
description = "StrideAlytics platform — backend API"
requires-python = ">=3.12"

dependencies = [
    # --- Core ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "supabase>=2.8.1",

    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # --- HTTP / external APIs ---
    "httpx>=0.27.2",
    "yfinance>=1.4.1",

    # --- Data / quant ---
    "numpy==1.26.4",  # Required 1.x version for stable TA-Lib linking on Python 3.12
    "pandas>=2.2.3",
    "scipy>=1.14.1",

    # --- Logging ---
    "structlog>=24.4.0",

    # --- Scheduling ---
    "apscheduler>=3.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "black>=25.1.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app/"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
no-build-package = ["ta-lib"]

[tool.uv.sources]
ta-lib = [
    { path = "./lib/TA_Lib-0.4.32-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { path = "./lib/TA_Lib-0.4.0-cp312-cp312-manylinux_2_17_x86_64.whl", marker = "sys_platform == 'linux'" }
]

