[project]
name = "stride-alytics-backend"
version = "0.1.0"
description = "StrideAlytics platform — backend API"
requires-python = ">=3.12"

dependencies = [
    # --- Core ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "supabase>=2.8.1",

    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # --- HTTP / external APIs ---
    "httpx>=0.27.2",
    "yfinance>=1.4.1",

    # --- Data / quant ---
    "numpy==1.26.4",  # Required 1.x version for stable TA-Lib linking on Python 3.12
    "pandas>=2.2.3",
    "scipy>=1.14.1",

    # --- Logging ---
    "structlog>=24.4.0",

    # --- Scheduling ---
    "apscheduler>=3.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "black>=25.1.0",
    "mypy>=1.13.0",
    # Type stubs for libraries that ship without inline types
    "scipy-stubs>=1.18.0",
    "types-python-jose>=3.5.0.20260408",
    # Async SQLite driver — used by tests/test_models.py to exercise the
    # SQLAlchemy ORM round-trip in-process without a Postgres dependency.
    "aiosqlite>=0.20.0",
]

# Backend developer-experience scripts — discoverable as `uv run lint`,
# `uv run format`, `uv run typecheck`, `uv run test`, `uv run verify`.
[project.scripts]
lint = "scripts.lint:main"
format = "scripts.format:main"
typecheck = "scripts.typecheck:main"
test = "scripts.test:main"
verify = "scripts.verify:main"

[tool.hatch.build.targets.wheel]
packages = ["app/"]

# The ``scripts/`` package is dev-tooling. Include it so the
# [project.scripts] entry points resolve when the wheel is installed.
[tool.hatch.build.targets.wheel.force-include]
"scripts" = "scripts"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/main.py",        # FastAPI app factory — exercised via TestClient
    "app/config.py",      # pydantic-settings — exercised implicitly
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Baseline captured 2026-06-29 — current 63% (after black reformat + dict
# generic fix-up). Targeted raise to 80% lives in a follow-up commit
# that adds tests for app/models/, app/services/market.py,
# app/services/screener.py, and app/database.py.
fail_under = 63
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = false
strict = true
# ``yfinance`` ships no type information and is not stubbed anywhere.
[[tool.mypy.overrides]]
module = ["yfinance.*"]
ignore_missing_imports = true

[tool.uv]
no-build-package = ["ta-lib"]

[tool.uv.sources]
ta-lib = [
    { path = "./lib/TA_Lib-0.4.32-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { path = "./lib/TA_Lib-0.4.0-cp312-cp312-manylinux_2_17_x86_64.whl", marker = "sys_platform == 'linux'" }
]

