[project]
name = "stride-alytics-scheduler"
version = "0.1.0"
description = "StrideAlytics platform — scheduled tasks (market data, Greeks, weekly picks)"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "supabase>=2,<3",
    "python-dotenv>=1,<2",
    "yfinance>=0.2.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/"]

[tool.ruff]
line-length = 100
target-version = "py310"