[project]
name = "stride-alytics-scheduler"
version = "0.1.0"
description = "StrideAlytics platform — scheduled tasks (market data, Greeks, weekly picks)"
requires-python = ">=3.12,<3.13"
license = "BSD-3-Clause"

dependencies = [
    # --- Shared Core Utilities ---
    "pydantic>=2.13.0",
    "supabase>=2.8.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    
    # --- Market Data Feed ---
    "yfinance>=0.2.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
link-mode = "copy"